[FIX] fixed a problem where, when searching for a contact in dark mode, the window color underneath was too bright and did not match the theme, other minor graphic upgrades

--- a/final_version_with_feats/css/style.css
+++ b/final_version_with_feats/css/style.css
@@ -539,6 +539,13 @@ body {
   background-color: rgb(238, 237, 237);
   color: rgb(0, 0, 0);
 }
+.bgDarkWebApp {
+  background-color: #313030;
+}
+
+.bgLightWebApp {
+  background-color: var(--webapp-bg);
+}
 /* RESPONSIVE */
 
 @media screen and (min-width: 576px) {
@@ -723,12 +730,13 @@ body {
 
 .dropdown-menu {
   position: absolute;
-  background-color: #f9f9f9;
+  background-color: #ebe9e9;
   max-width: 100px;
   box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
   top: 25px;
   z-index: 1;
   text-align: center;
+  border-radius: 10px;
 }
 
 .positionSent {
@@ -740,7 +748,7 @@ body {
 
 .dropdown-menu button {
   color: black;
-  padding: 12px 16px;
+  padding: 7px 16px;
   display: block;
   border: none;
   background-color: transparent;
@@ -751,4 +759,5 @@ body {
 .dropdown-menu button:hover {
   background-color: #e0dbdbc7;
   cursor: pointer;
+  border-radius: 10px;
 }
